<resources>
    <string name="app_name">Facybook</string>
    <string name="signup_invitation">Create New Account</string>
    <string name="log_in">Log In</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="logo_description">apps logo</string>
    <string name="forgot_password_question">Forgot password?</string>
    <string name="user_profile_picture">profile picture</string>
    <string name="user_name_feed">User Name</string>
    <string name="post_text">Post Text</string>
    <string name="time_posted">Time Posted</string>
    <string name="user_name">User Name</string>
    <string name="number_likes">100 Likes</string>
    <string name="number_comments">50 Comments</string>
    <string name="comment_btn">comment</string>
    <string name="share_btn">Share</string>
    <string name="like_btn">Like</string>
    <string name="post_description">this presents the posted picture</string>
    <string name="time_published">3 hours ago</string>
    <string name="post_caption">Morning Coffee:)</string>
    <string name="like_btn_description">like_btn</string>
    <string name="share_btn_description">share_btn</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="nickname">Nickname</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="sign_up">Sign Up</string>
    <string name="search_box_hint">Search</string>
    <string name="light_mode_switch">Light Mode</string>
    <string name="menu_button">menu for feed</string>
    <string name="plus_button">add post to feed</string>
    <string name="edit_btn_description">edit post</string>
    <string name="menu_caption">Menu</string>
    <string name="settings"> settings btn </string>
    <string name="search"> search btn </string>
    <string name="profile_picture" />
    <string name="friends">Friends</string>
    <string name="marketplace">Marketplace</string>
    <string name="video">Video</string>
    <string name="groups">Groups</string>
    <string name="saved">Saved</string>
    <string name="memories">Memories</string>
    <string name="view_profile">View profile</string>
    <string name="add_comment">Add comment</string>
    <string name="delete_btn_description">delete comment</string>
    <string name="edit_comment_btn">edit comment</string>
    <string name="messenger">Messenger</string>
    <string name="group">Group</string>
    <string name="your_story">Your Story</string>
    <string name="copy_link">Copy Link</string>
    <string name="attach_media_btn">Attach Media</string>
    <string name="post_btn">Post</string>
    <string name="what_s_on_your_mind_caption">What\'s on your mind?</string>
    <string name="preview_of_picture_despription">preview of picture</string>
    <string name="send_button_description">sent button for comments</string>
    <string name="post_content_edit">edit text of post</string>
    <string name="save_changes">Save changes</string>
    <string name="edit_comment_description">edit comment</string>
    <string name="background_picture_for_user_page_description">backgroung picture for user page</string>
    <string name="friends_num">Friends: 1000</string>
    <string name="friend_request_btn">Friend Request</string>
    <string name="send_message_btn">Send Message</string>
    <string name="BaseUrl">http://172.29.160.1:12345/</string>
    <string name="friends_count">%1$d friends</string>
    <string name="logout">Log out</string>
    <string name="update_user">Update User</string>
    <string name="delete_user">Delete User</string>
    <string name="delete_account">Delete account</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="no_requests_yet">No requests yet!</string>
    <string name="not_friends">This account is private. Send a friend request to see more.</string>
    <string name="not_friends_private">This account is private.</string>
    <string name="not_friends_see_more">Send a friend request to see more.</string>
    <string name="make_connections">It\'s never too late to make new connections!</string>
    <string name="friends_now">Accepted!</string>
    <string name="request_denied">Denied</string>
    <string name="pending">Pending…</string>
    <string name="welcome">Welcome!</string>
    <string name="part_of_our_community">Now you\'re officially part of our community!</string>
    <string name="to_log_in">To Log In</string>
</resources>