
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/user_profile_picture"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/user_profile_picture"
            android:src="@drawable/user_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/user_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:gravity="center_vertical"
            android:text="@string/user_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/time_published"
            app:layout_constraintStart_toEndOf="@id/user_profile_picture"
            app:layout_constraintTop_toTopOf="@id/user_profile_picture" />

        <TextView
            android:id="@+id/time_published"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:gravity="center_vertical"
            android:text="@string/time_published"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/user_profile_picture"
            app:layout_constraintStart_toEndOf="@id/user_profile_picture"
            app:layout_constraintTop_toBottomOf="@id/user_profile_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/morning_coffee_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_caption"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_marginBottom="50dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/post_picture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/post_description"
            android:scaleType="centerCrop"
            android:src="@drawable/user_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/likes_comments_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_picture">

            <TextView
                android:id="@+id/likes_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/number_likes"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/comments_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/number_comments"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/likes_comments_layout">

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@color/material_on_background_disabled"
                android:src="@drawable/like_icon"
                android:contentDescription="@string/like_btn_description" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@color/material_on_background_disabled"
                android:src="@drawable/comment_icon"
                android:contentDescription="@string/comment_btn" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@color/material_on_background_disabled"
                android:src="@drawable/share_icon"
                android:contentDescription="@string/share_btn_description" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
