<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- User Profile Section -->
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <com.example.Facybook_android.viewModels.CircularImageView
                android:id="@+id/user_profile_picture"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/user_profile_picture"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/user_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- EditText for Post Content -->
        <EditText
            android:id="@+id/post_content_edit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:autofillHints="textMultiLine"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textAlignment="textStart"
            android:textSize="16sp" />

        <!-- ImageView for Post Picture -->
        <ImageView
            android:id="@+id/post_picture"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/post_description"
            android:scaleType="centerCrop" />

        <!-- Button for Save Changes -->
        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:backgroundTint="#FF4CAF50"
            android:text="@string/save_changes"
            android:textColor="#FF000000" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>