<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Facybook_android.app.View.Feed.Feed">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:titleEnabled="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.Facybook_android.app.View.Feed.Feed"
                tools:ignore="MissingDefaultResource">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="@string/app_name"
                    app:titleTextAppearance="@style/ToolbarTitleStyle"
                    app:titleTextColor="#E9081698">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/logoutTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:text="@string/logout"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:clickable="true"
                            android:focusable="true"
                            android:background="?attr/selectableItemBackground"
                            android:padding="15dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/btn_plus"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/plus_button"
                            android:padding="10dp"
                            android:src="@drawable/plus_ico" />

                        <ImageButton
                            android:id="@+id/btn_menu"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/menu_button"
                            android:padding="10dp"
                            android:src="@drawable/menu_ico" />
                    </LinearLayout>

                </androidx.appcompat.widget.Toolbar>

                <EditText
                    android:id="@+id/search_box"
                    android:backgroundTint="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints="text"
                    android:textColorHint="#FFD3D3D3"
                    android:hint="@string/search_box_hint"
                    android:inputType="text"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/toolbar" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- SwipeRefreshLayout and RecyclerView for scrolling content -->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:clickable="true"
        android:focusable="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lstPosts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>



