<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Facybook_android.app.View.Feed.UserPage">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:titleEnabled="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.Facybook_android.app.View.Feed.UserPage"
                tools:ignore="MissingDefaultResource">

                <ImageView
                    android:id="@+id/backgroundImage"
                    android:layout_width="417dp"
                    android:layout_height="202dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/background_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    android:contentDescription="@string/background_picture_for_user_page_description" />

                <TextView
                    android:id="@+id/logoutTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/logout"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/profileLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_marginTop="80dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.165">

                    <com.Facybook_android.app.ViewModels.CircularImageView
                        android:id="@+id/user_profile_picture"
                        android:layout_width="201dp"
                        android:layout_height="118dp"
                        android:layout_marginStart="3dp"
                        android:contentDescription="@string/user_profile_picture"
                        android:scaleType="centerCrop"
                        android:clickable="true"
                        android:focusable="true" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingTop="8dp"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/friendsCounter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingStart="16dp"
                            android:paddingTop="8dp"
                            android:paddingEnd="16dp"
                            android:textColor="@color/black"
                            android:textSize="11sp" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/buttonLayout"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profileLayout"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:id="@+id/friendRequestButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#FD223DD5"
                        android:text="@string/friend_request_btn"
                        android:textColor="#FFFFFF"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginHorizontal="15dp"
                        android:paddingHorizontal="40dp"/>
                    <Button
                        android:id="@+id/sendMessageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:backgroundTint="#FD223DD5"
                        android:text="@string/send_message_btn"
                        android:textColor="#FFFFFF"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginHorizontal="20dp"
                        android:paddingHorizontal="40dp"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- SwipeRefreshLayout and RecyclerView for scrolling content -->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:focusable="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lstPosts"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>



